ggponet.h

typedef struct GGPOSession GGPOSession;
typedef int GGPOPlayerHandle;
typedef enum {
   GGPO_PLAYERTYPE_LOCAL,
   GGPO_PLAYERTYPE_REMOTE,
   GGPO_PLAYERTYPE_SPECTATOR,
} GGPOPlayerType;
typedef struct GGPOPlayer {
   int               size;
   GGPOPlayerType    type;
   int               player_num;
   union {
      struct {
      } local;
      struct {
         char        ip_address[32];
         short       port;
      } remote;
   } u;
} GGPOPlayer;
typedef enum {
   GGPO_ERRORLIST
} GGPOErrorCode;
typedef struct {
   GGPOEventCode code;
   union {
      struct {
         GGPOPlayerHandle  player;
      } connected;
      struct {
         GGPOPlayerHandle  player;
         int               count;
         int               total;
      } synchronizing;
      struct {
         GGPOPlayerHandle  player;
      } synchronized;
      struct {
         GGPOPlayerHandle  player;
      } disconnected;
      struct {
         int               frames_ahead;
      } timesync;
      struct {
         GGPOPlayerHandle  player;
         int               disconnect_timeout;
      } connection_interrupted;
      struct {
         GGPOPlayerHandle  player;
      } connection_resumed;
   } u;
} GGPOEvent;
typedef struct {
   bool (__cdecl *begin_game)(const char *game);
   bool (__cdecl *save_game_state)(unsigned char **buffer, int *len, int *checksum, int frame);
   bool (__cdecl *load_game_state)(unsigned char *buffer, int len);
   bool (__cdecl *log_game_state)(char *filename, unsigned char *buffer, int len);
   void (__cdecl *free_buffer)(void *buffer);
   bool (__cdecl *advance_frame)(int flags);
   bool (__cdecl *on_event)(GGPOEvent *info);
} GGPOSessionCallbacks;
typedef struct GGPONetworkStats {
   struct {
      int   send_queue_len;
      int   recv_queue_len;
      int   ping;
      int   kbps_sent;
   } network;
   struct {
      int   local_frames_behind;
      int   remote_frames_behind;
   } timesync;
} GGPONetworkStats;
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_start_session(GGPOSession **session,
                                                               GGPOSessionCallbacks *cb,
                                                               const char *game,
                                                               int num_players,
                                                               int input_size,
                                                               int localport);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_add_player(GGPOSession *session,
                                                            GGPOPlayer *player,
                                                            GGPOPlayerHandle *handle);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_start_synctest(GGPOSession **session,
                                                                GGPOSessionCallbacks *cb,
                                                                char *game,
                                                                int num_players,
                                                                int input_size,
                                                                int frames);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_start_spectating(GGPOSession **session,
                                                                  GGPOSessionCallbacks *cb,
                                                                  const char *game,
                                                                  int num_players,
                                                                  int input_size,
                                                                  int local_port,
                                                                  char *host_ip,
                                                                  int host_port);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_close_session(GGPOSession *);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_set_frame_delay(GGPOSession *,
                                                                 GGPOPlayerHandle player,
                                                                 int frame_delay);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_idle(GGPOSession *,
                                                      int timeout);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_add_local_input(GGPOSession *,
                                                                 GGPOPlayerHandle player,
                                                                 void *values,
                                                                 int size);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_synchronize_input(GGPOSession *,
                                                                   void *values,
                                                                   int size,
                                                                   int *disconnect_flags);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_disconnect_player(GGPOSession *,
                                                                   GGPOPlayerHandle player);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_advance_frame(GGPOSession *);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_get_network_stats(GGPOSession *,
                                                                   GGPOPlayerHandle player,
                                                                   GGPONetworkStats *stats);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_set_disconnect_timeout(GGPOSession *,
                                                                        int timeout);
__declspec(dllexport) GGPOErrorCode __cdecl ggpo_set_disconnect_notify_start(GGPOSession *,
                                                                             int timeout);
__declspec(dllexport) void __cdecl ggpo_log(GGPOSession *,
                                            const char *fmt, ...);
__declspec(dllexport) void __cdecl ggpo_logv(GGPOSession *,
                                             const char *fmt,
                                             va_list args);