ggponet.rs

#[test]
fn bindgen_test_layout_GGPOSessionCallbacks() {
    assert_eq!(
        ::std::mem::size_of::<GGPOSessionCallbacks>(),
        56usize,
        concat!("Size of: ", stringify!(GGPOSessionCallbacks))
    );
    assert_eq!(
        ::std::mem::align_of::<GGPOSessionCallbacks>(),
        8usize,
        concat!("Alignment of ", stringify!(GGPOSessionCallbacks))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<GGPOSessionCallbacks>())).begin_game as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(begin_game)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPOSessionCallbacks>())).save_game_state as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(save_game_state)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPOSessionCallbacks>())).load_game_state as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(load_game_state)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPOSessionCallbacks>())).log_game_state as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(log_game_state)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPOSessionCallbacks>())).free_buffer as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(free_buffer)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPOSessionCallbacks>())).advance_frame as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(advance_frame)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<GGPOSessionCallbacks>())).on_event as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPOSessionCallbacks),
            "::",
            stringify!(on_event)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GGPONetworkStats {
    pub network: GGPONetworkStats__bindgen_ty_1,
    pub timesync: GGPONetworkStats__bindgen_ty_2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GGPONetworkStats__bindgen_ty_1 {
    pub send_queue_len: ::std::os::raw::c_int,
    pub recv_queue_len: ::std::os::raw::c_int,
    pub ping: ::std::os::raw::c_int,
    pub kbps_sent: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_GGPONetworkStats__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<GGPONetworkStats__bindgen_ty_1>(),
        16usize,
        concat!("Size of: ", stringify!(GGPONetworkStats__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<GGPONetworkStats__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(GGPONetworkStats__bindgen_ty_1))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPONetworkStats__bindgen_ty_1>())).send_queue_len as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats__bindgen_ty_1),
            "::",
            stringify!(send_queue_len)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPONetworkStats__bindgen_ty_1>())).recv_queue_len as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats__bindgen_ty_1),
            "::",
            stringify!(recv_queue_len)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPONetworkStats__bindgen_ty_1>())).ping as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats__bindgen_ty_1),
            "::",
            stringify!(ping)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPONetworkStats__bindgen_ty_1>())).kbps_sent as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats__bindgen_ty_1),
            "::",
            stringify!(kbps_sent)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GGPONetworkStats__bindgen_ty_2 {
    pub local_frames_behind: ::std::os::raw::c_int,
    pub remote_frames_behind: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_GGPONetworkStats__bindgen_ty_2() {
    assert_eq!(
        ::std::mem::size_of::<GGPONetworkStats__bindgen_ty_2>(),
        8usize,
        concat!("Size of: ", stringify!(GGPONetworkStats__bindgen_ty_2))
    );
    assert_eq!(
        ::std::mem::align_of::<GGPONetworkStats__bindgen_ty_2>(),
        4usize,
        concat!("Alignment of ", stringify!(GGPONetworkStats__bindgen_ty_2))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPONetworkStats__bindgen_ty_2>())).local_frames_behind
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats__bindgen_ty_2),
            "::",
            stringify!(local_frames_behind)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<GGPONetworkStats__bindgen_ty_2>())).remote_frames_behind
                as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats__bindgen_ty_2),
            "::",
            stringify!(remote_frames_behind)
        )
    );
}
#[test]
fn bindgen_test_layout_GGPONetworkStats() {
    assert_eq!(
        ::std::mem::size_of::<GGPONetworkStats>(),
        24usize,
        concat!("Size of: ", stringify!(GGPONetworkStats))
    );
    assert_eq!(
        ::std::mem::align_of::<GGPONetworkStats>(),
        4usize,
        concat!("Alignment of ", stringify!(GGPONetworkStats))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<GGPONetworkStats>())).network as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats),
            "::",
            stringify!(network)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<GGPONetworkStats>())).timesync as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(GGPONetworkStats),
            "::",
            stringify!(timesync)
        )
    );
}
extern "C" {
    pub fn ggpo_start_session(
        session: *mut *mut GGPOSession,
        cb: *mut GGPOSessionCallbacks,
        game: *const ::std::os::raw::c_char,
        num_players: ::std::os::raw::c_int,
        input_size: ::std::os::raw::c_int,
        localport: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_add_player(
        session: *mut GGPOSession,
        player: *mut GGPOPlayer,
        handle: *mut GGPOPlayerHandle,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_start_synctest(
        session: *mut *mut GGPOSession,
        cb: *mut GGPOSessionCallbacks,
        game: *mut ::std::os::raw::c_char,
        num_players: ::std::os::raw::c_int,
        input_size: ::std::os::raw::c_int,
        frames: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_start_spectating(
        session: *mut *mut GGPOSession,
        cb: *mut GGPOSessionCallbacks,
        game: *const ::std::os::raw::c_char,
        num_players: ::std::os::raw::c_int,
        input_size: ::std::os::raw::c_int,
        local_port: ::std::os::raw::c_int,
        host_ip: *mut ::std::os::raw::c_char,
        host_port: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_close_session(arg1: *mut GGPOSession) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_set_frame_delay(
        arg1: *mut GGPOSession,
        player: GGPOPlayerHandle,
        frame_delay: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_idle(arg1: *mut GGPOSession, timeout: ::std::os::raw::c_int) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_add_local_input(
        arg1: *mut GGPOSession,
        player: GGPOPlayerHandle,
        values: *mut ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_synchronize_input(
        arg1: *mut GGPOSession,
        values: *mut ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
        disconnect_flags: *mut ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_disconnect_player(
        arg1: *mut GGPOSession,
        player: GGPOPlayerHandle,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_advance_frame(arg1: *mut GGPOSession) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_get_network_stats(
        arg1: *mut GGPOSession,
        player: GGPOPlayerHandle,
        stats: *mut GGPONetworkStats,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_set_disconnect_timeout(
        arg1: *mut GGPOSession,
        timeout: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_set_disconnect_notify_start(
        arg1: *mut GGPOSession,
        timeout: ::std::os::raw::c_int,
    ) -> GGPOErrorCode;
}
extern "C" {
    pub fn ggpo_log(arg1: *mut GGPOSession, fmt: *const ::std::os::raw::c_char, ...);
}
extern "C" {
    pub fn ggpo_logv(arg1: *mut GGPOSession, fmt: *const ::std::os::raw::c_char, args: va_list);
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;
